--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -53,10 +53,10 @@
 
     // size
     &-small {
-        padding: 2px 4px;
+        padding: 2px 4px !important;
     }
     &-medium {
-        padding: 4px 8px;
+        padding: 4px 8px !important;
     }
 }
 
