--- a/frontend/src/styles/textarea_limit_word.scss
+++ b/frontend/src/styles/textarea_limit_word.scss
@@ -2,7 +2,7 @@
 
 .textarea-limit-word {
     .textarea {
-        background-color: $light-blue-color;
+        background-color: $light-blue-color !important;
         border-color: transparent;
     }
     .limit-words {
