--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,12 +1,11 @@
 @use "./styles/variables" as *;
-@import "~bootstrap/scss/bootstrap";
-@import url("https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: "Edu NSW ACT Foundation", cursive;
+    font-family: "Roboto Condensed", sans-serif;
 }
 
 ::-webkit-scrollbar {
@@ -43,8 +42,8 @@
     }
 
     &-outline {
-        background-color: rgba($color: $secondary-color, $alpha: 0.6);
-        border: 2px solid $primary-color;
+        background-color: rgba($color: $secondary-color, $alpha: 0.6) !important;
+        border: 2px solid $primary-color !important;
         &:active,
         &:hover {
             border-color: $primary-color !important;
