--- a/frontend/src/styles/sidebar.scss
+++ b/frontend/src/styles/sidebar.scss
@@ -21,6 +21,7 @@ $height-header-sidebar: 150px;
             border-right: none;
             border-top: none;
             border-bottom: 1px solid $separator-color;
+            outline: none;
 
             .wrapper-icon-create {
                 .icon-create {
