--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -8,9 +8,9 @@ $large-avatar-size: 56px;
 $huge-avatar-size: 78px;
 
 $secondary-color: #5cc2f2;
-$primary-color: #191caa;
-$dark-blue-color: #282960;
-$light-blue-color: #389dcd;
+$primary-color: #e8a04e;
+$green-color: #a0ba73;
+$light-green-color: #f3f5d5;
 $red-color: #cf3332;
 $separator-color: #acacac;
 $black-color: #000;
