--- a/frontend/src/styles/profile_modal.scss
+++ b/frontend/src/styles/profile_modal.scss
@@ -4,7 +4,7 @@
     .header,
     .body {
         background-color: $secondary-color;
-        border-color: $light-blue-color;
+        border-color: $light-green-color;
     }
 
     .body {
