--- a/frontend/src/styles/chat_box.scss
+++ b/frontend/src/styles/chat_box.scss
@@ -8,7 +8,7 @@ $max-height-input: 80px;
     .header {
         max-height: $max-height-header;
         border-bottom: 2px solid $separator-color;
-        background-color: #0a2c3d99;
+        background-color: rgba($color: $primary-color, $alpha: 0.75);
         box-shadow: 0px 2px 10px 0px #0a2c3d99;
 
         .wrapper-header {
@@ -21,7 +21,7 @@ $max-height-input: 80px;
         }
 
         .icon-more-info {
-            fill: $white-color;
+            fill: $black-color;
             cursor: pointer;
         }
     }
