--- a/frontend/src/styles/chat_window.scss
+++ b/frontend/src/styles/chat_window.scss
@@ -1,15 +1,21 @@
 @use "variables" as *;
 
 .chat-window {
-    height: 100vh;
     .empty-chatbox {
+        position: fixed;
+        top: 40%;
+        left: 60%;
+        transform: translate(-50%, -50%);
+        border-radius: 10px;
+        background-color: rgba($color: $green-color, $alpha: 0.8);
+        text-align: center;
         .title {
             color: $white-color;
         }
         .icon-inbox {
             fill: rgba($color: $white-color, $alpha: 0.7);
-            height: 6%;
-            width: 6%;
+            height: 50%;
+            width: 50%;
         }
     }
 }
