--- a/frontend/src/styles/form_input.scss
+++ b/frontend/src/styles/form_input.scss
@@ -12,7 +12,7 @@
         }
 
         .icon-emoji {
-            fill: $white-color;
+            fill: $primary-color;
             cursor: pointer;
             user-select: none;
 
@@ -28,7 +28,8 @@
         max-height: calc($min-height * 2);
         line-height: 1;
         border-radius: 4px;
-        background-color: $white-color;
+        background-color: $light-green-color;
+        border: 1px solid $light-green-color !important;
         outline: none;
         overflow-x: hidden;
         overflow-y: auto;
