--- a/frontend/src/styles/leave_room_modal.scss
+++ b/frontend/src/styles/leave_room_modal.scss
@@ -2,7 +2,7 @@
 
 .leave-room-modal {
     .body {
-        background-color: $secondary-color;
+        background-color: $primary-color;
         border-radius: 4px;
     }
 }
