--- a/frontend/src/styles/roomlist.scss
+++ b/frontend/src/styles/roomlist.scss
@@ -6,22 +6,21 @@
     overflow-y: auto;
     .room-item {
         cursor: pointer;
+        border-radius: 10px;
         user-select: none;
         &:hover {
-            background-color: rgba($color: $secondary-color, $alpha: 0.2);
+            background-color: rgba($color: $primary-color, $alpha: 0.2);
         }
         &:active {
             opacity: 0.7;
         }
-        & + .room-item {
-            border-top: 1px solid rgba($color: $secondary-color, $alpha: 1);
-        }
-        &:last-of-type {
-            border-bottom: 1px solid rgba($color: $secondary-color, $alpha: 1);
-        }
 
-        .room-pic {
-            border: 1px solid rgba($color: $secondary-color, $alpha: 1);
+        &.active {
+            background-image: linear-gradient(
+                90deg,
+                rgba($color: $primary-color, $alpha: 1),
+                rgba($color: $white-color, $alpha: 0.6)
+            );
         }
 
         .room-content {
