--- a/frontend/src/styles/sidebar.scss
+++ b/frontend/src/styles/sidebar.scss
@@ -2,13 +2,17 @@
 $height-header-sidebar: 150px;
 
 .sidebar {
-    background-color: $light-blue-color;
-    border-right: 1px solid $secondary-color;
+    background-image: linear-gradient(
+        to left,
+        rgba($color: $green-color, $alpha: 0.8),
+        rgba($color: $green-color, $alpha: 1)
+    );
+    box-shadow: 2px 0px 2px 2px rgba($color: $green-color, $alpha: 0.25);
     overflow: hidden;
 
     .header {
         max-height: $height-header-sidebar;
-        border-bottom: 1px solid $separator-color;
+
         .btn + .btn {
             margin-left: 4px;
         }
@@ -19,8 +23,8 @@ $height-header-sidebar: 150px;
             background-color: transparent;
             border-left: none;
             border-right: none;
-            border-top: none;
-            border-bottom: 1px solid $separator-color;
+            border-top: 1px solid rgba($color: $white-color, $alpha: 0.2);
+            border-bottom: 1px solid rgba($color: $white-color, $alpha: 0.2);
             outline: none;
 
             .wrapper-icon-create {
@@ -35,7 +39,7 @@ $height-header-sidebar: 150px;
             }
 
             &:hover {
-                background-color: rgba($color: $secondary-color, $alpha: 0.2);
+                background-color: rgba($color: $primary-color, $alpha: 0.2);
             }
             &:active {
                 opacity: 0.7;
