--- a/frontend/src/styles/create_room_modal.scss
+++ b/frontend/src/styles/create_room_modal.scss
@@ -1,7 +1,5 @@
 @use "variables" as *;
 
-$max-height-list: 100px;
-
 .create-room-modal {
     .header,
     .body {
@@ -10,6 +8,7 @@ $max-height-list: 100px;
     }
 
     .body {
+        max-height: 300px;
         .search-box {
             background-color: $white-color;
             border-radius: 4px;
@@ -28,19 +27,13 @@ $max-height-list: 100px;
             }
 
             .search-list {
-                display: none;
-                max-height: $max-height-list;
+                max-height: 200px;
                 width: 100%;
                 color: $black-color;
                 background-color: $white-color;
                 border-radius: 4px;
-                transform: translateY(calc(100% + 2px));
                 overflow-x: hidden;
                 overflow-y: scroll;
-
-                &:active {
-                    display: block;
-                }
 
                 .search-item {
                     &:hover {
@@ -56,7 +49,7 @@ $max-height-list: 100px;
         }
 
         .list-added-user {
-            max-height: $max-height-list;
+            max-height: 100px;
             overflow-x: hidden;
             overflow-y: auto;
             &::-webkit-scrollbar {
