--- a/frontend/src/styles/sidebar.scss
+++ b/frontend/src/styles/sidebar.scss
@@ -13,8 +13,42 @@ $height-header-sidebar: 150px;
     .header {
         max-height: $height-header-sidebar;
 
-        .btn + .btn {
-            margin-left: 4px;
+        .popper {
+            max-width: 150px;
+            right: 10px;
+            z-index: 1;
+        }
+        .create-room {
+            &-icon {
+                cursor: pointer;
+                transition: all 0.1s ease-in-out;
+                &:hover {
+                    color: rgba($color: $primary-color, $alpha: 0.8);
+                }
+            }
+        }
+        .menu {
+            .menu-icon {
+                cursor: pointer;
+                transition: all 0.1s ease-in-out;
+                &:hover {
+                    color: rgba($color: $primary-color, $alpha: 0.8);
+                }
+            }
+            .menu-list {
+                .menu-item {
+                    padding: 4px;
+                    max-width: 100px;
+                    min-width: 80px;
+                    border-radius: 6px;
+                    word-wrap: break-word;
+                    cursor: pointer;
+                    user-select: none;
+                    &:hover {
+                        background-color: rgba($color: $black-color, $alpha: 0.05);
+                    }
+                }
+            }
         }
     }
     .main {
@@ -46,5 +80,12 @@ $height-header-sidebar: 150px;
                 opacity: 0.7;
             }
         }
+    }
+}
+
+@media (max-width: 1260px) {
+    .header-menu {
+        padding: 8px 0;
+        flex: 1;
     }
 }
